# spacetimedb-python-sdk

./: .gitignore  README.md  client_cache.py  doprotoc.bat  gen_lazydocs.py  network_manager.py  pyproject.toml  readme.md  setup.py  spacetime_config.py  websocket_client.py
.github/workflows/: pypi-publish.yml
docs/: network_manager.md  spacetimedb_client.md  websocket_client.md
examples/asyncio/: basic_chat_responder.py  chat_command_line.py  send_chat.py
examples/basic-chat/: run.py
examples/multi-user-text-adventure/: console_window.py  create_char_prompt.py  game_config.py  game_controller.py  game_prompt.py  helpers.py  json_encoding.py  narrative_generator.py  openai_harness.py  reducer_handlers.py  run.py  zone_connection_generator.py  zone_generator.py
examples/quickstart/: message_board.py
lazydocs/: spacetimedb_python_sdk.spacetimedb_client.md  spacetimedb_sdk.spacetimedb_async_client.md  spacetimedb_sdk.spacetimedb_client.md  src.spacetimedb_sdk.spacetimedb_async_client.md  src.spacetimedb_sdk.spacetimedb_client.md
spacetimedb_python_sdk/: client_cache.py  network_manager.py  spacetime_config.py  spacetime_websocket_client.py  spacetimedb_async_client.py  spacetimedb_client.py
src/: gen_lazydocs.py
src/spacetimedb_python_sdk/: _version.py  client_cache.py  local_config.py
src/spacetimedb_python_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/spacetimedb_sdk/: client_cache.py  local_config.py  spacetime_websocket_client.py  spacetimedb_async_client.py  spacetimedb_client.py
test/: console_window.py  create_char_prompt.py  game_controller.py  game_prompt.py  helpers.py  reducer_handlers.py  run.py
test/Server/: Cargo.toml
test/autogen/: exit.py  (+12 more)
(+48 files in other folders)
