[build-system]
requires = ["setuptools", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "spacetimedb_sdk"
authors = [
    {name = "Derek Brinkmann", email = "derek@clockworklabs.io"},
]
# urls: Table
# Should describe where to find useful info for your project
urls = {source = "github.com/clockworklabs/spacetimedb-python-sdk", website = "spacetimedb.com"}

dependencies = [
    "websocket-client",
    "configparser",
]
version = "0.5.0"
readme = "README.md"