[build-system]
requires = ["setuptools", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "spacetimedb_sdk"
authors = [
    { name = "Clockwork Labs", email = "john@clockworklabs.io" },
]

dependencies = [
    "websocket-client",
    "configparser",
]
version = "0.8.0"
readme = "README.md"

# urls
# Should describe where to find useful info for your project
[project.urls]
homepage = "https://spacetimedb.com"
repository = "https://github.com/clockworklabs/spacetimedb-python-sdk"
